@@ -106,9 +106,6 @@ public class JarFileUpdateTestRunner extends Runner {
 			customOptions += "-Xshareclasses:name=jarfileupdatetest,destroy ";
 			break;
 		}
-		if (Integer.parseInt(javaVersion) >= 90) {
-			customOptions += " --add-exports=openj9.sharedclasses/com.ibm.oti.shared=ALL-UNNAMED ";
-		}
 		return customOptions;
 	}
 	
